navbar dark mode fixes

--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -1,56 +1,3 @@
-//@mixin navbar-color($bg-color: transparent, $color: $navbar-light-color, $brand-color: $navbar-light-brand-color, $link-active-color: $navbar-light-active-color, $link-disabled-color: $navbar-light-disabled-color, $link-active-bg: $navbar-light-active-bg) {
-//  --#{$prefix}navbar-active-bg: #{$link-active-bg};
-//  --#{$prefix}navbar-bg: #{$bg-color};
-//  color: $color;
-//
-//  .navbar-brand {
-//    color: $brand-color;
-//
-//    &:hover,
-//    &:focus {
-//      color: $brand-color;
-//      opacity: .8;
-//    }
-//  }
-//
-//  .navbar-nav {
-//    .nav-link {
-//      color: $color;
-//
-//      &:hover,
-//      &:focus {
-//        color: $link-active-color;
-//      }
-//
-//      &.disabled {
-//        color: $link-disabled-color;
-//      }
-//    }
-//
-//    .show > .nav-link,
-//    .active > .nav-link,
-//    .nav-link.show,
-//    .nav-link.active {
-//      color: $link-active-color;
-//    }
-//  }
-//
-//  .navbar-toggler {
-//    color: $brand-color;
-//    border-color: transparent;
-//  }
-//
-//  .navbar-text {
-//    color: $color;
-//
-//    a,
-//    a:hover,
-//    a:focus {
-//      color: $color;
-//    }
-//  }
-//}
-
 @mixin navbar-dark {
   --#{$prefix}navbar-bg: #{$dark};
   --#{$prefix}scrollbar-color: var(--#{$prefix}white-rgb);
@@ -139,7 +86,7 @@ Navbar
   --#{$prefix}navbar-border-width: #{$navbar-border-width};
   --#{$prefix}navbar-active-border-color: #{$navbar-active-border-color};
   --#{$prefix}navbar-active-bg: #{$navbar-light-active-bg};
-  --#{$prefix}navbar-color: inherit;
+  --#{$prefix}navbar-color: var(--#{$prefix}body-color);
   --#{$prefix}navbar-border-color: #{$navbar-border-color};
   align-items: stretch;
   min-height: $navbar-height;
